fixed text size and alignment

--- a/style.css
+++ b/style.css
@@ -5,28 +5,25 @@ body {
 }
 #stewie {
   color: rgb(236, 6, 6);
-  float: left;
 }
 #meg {
   color: rgb(255, 0, 222);
-  float: left;
 }
 #peter {
   color: rgb(34, 108, 16);
-  float: left;
 }
 #lois {
   color: rgb(0, 255, 163);
-  float: left;
 }
 #brian {
   color: rgb(255, 0, 0);
-  float: left;
 }
 #chris {
   color: rgb(0, 79, 255);
-  float: left;
 }
 div {
+  text-align: center;
   padding-left: 30px;
+  font-size: 25px;
+  font-family: sans-serif;
 }
